flux/apps/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: default
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      nodeSelector:
        zigbee: "true"
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2026.9.3
          resources:
            requests:
              cpu: 83m
              memory: 569Mi
            limits:
              memory: 569Mi
          securityContext:
            # Required for zigbee device access
            privileged: true
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: zigbee-device
              mountPath: /dev/ttyACM0
              readOnly: true
            - mountPath: /run/dbus
              name: dbus
              readOnly: true
            - name: homeassistant-config
              mountPath: /config
      volumes:
        - name: zigbee-device
          hostPath:
            path: /dev/ttyACM0
            type: CharDevice
        - name: dbus
          hostPath:
            path: /run/dbus
            type: Directory
        - name: homeassistant-config
          nfs:
            server: datasphere
            path: /Root/Volumes/homeassistant
