flux/apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: default
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
