flux/apps/homeassistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`ha.home`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ha.arlodev.co.uk`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.arlodev.co.uk`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
  tls:
    secretName: cert-homeassistant
